[gd_scene load_steps=6 format=2]

[ext_resource path="res://characters/player.gd" type="Script" id=1]
[ext_resource path="res://images/Yggdrasil_Player_Databook_07.png" type="Texture" id=2]
[ext_resource path="res://characters/row_button.gd" type="Script" id=3]
[ext_resource path="res://characters/character_info.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Player" type="Area2D" index="0"]

position = Vector2( -0.488926, -2.92902 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( -0.698189, -57.1947 )
scale = Vector2( 0.226961, 0.226961 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]

[node name="PlayerShape" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0.0637668, 0.0215063 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="HP" type="Label" parent="PlayerShape" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = 29.0
margin_right = 26.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "hp:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Energy" type="Label" parent="PlayerShape" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -28.0
margin_top = -158.0
margin_right = 22.0
margin_bottom = -144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Energy: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="HealthBar" type="ProgressBar" parent="PlayerShape" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -38.0
margin_top = 49.0
margin_right = 37.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = true

[node name="RowButton" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -42.0
margin_top = 104.0
margin_right = 43.0
margin_bottom = 124.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "In Front"
flat = false
align = 1
script = ExtResource( 3 )

[node name="CharacterInfo" parent="." index="3" instance=ExtResource( 4 )]

visible = false
position = Vector2( 76.3293, 12.554 )
scale = Vector2( 1.16581, 1.84002 )
z_index = 1
_sections_unfolded = [ "Transform", "Z Index" ]

[connection signal="input_event" from="." to="." method="_on_Player_input_event"]


